# ohms-adaptq

./: .gitignore  CHANGELOG.md  CLEANUP-SUMMARY.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: lib.rs  model_fetcher.rs  native_fetchers.rs  quantizer.rs  real_model_loader.rs  streaming_loader.rs  super_apq.rs  super_apq_min.rs  universal_loader.rs
src/manifest/: mod.rs
src/novaq/: codebooks.rs  distillation.rs  mod.rs  normalization.rs  numerical_stability.rs  progress.rs  recovery.rs  refinement.rs  subspace_strategy.rs
src/quantization/: mod.rs
src/verification/: mod.rs
tests/: integration_tests.rs  performance_tests.rs  quantize_smoke.rs  stability_tests.rs
