[package]
name = "ohms-adaptq"
version = "2.0.0"
edition = "2021"
authors = ["Dedan Okware <softengdedan@gmail.com>"]
description = "Revolutionary Super-APQ: Zero-Cost Universal LLM Quantization Engine"
license = "MIT"
repository = "https://github.com/ohms-project/ohms-adaptq"
homepage = "https://ohms-project.org"
keywords = ["llm", "quantization", "icp", "blockchain", "ai"]
categories = ["compression", "science", "algorithms"]

[[bin]]
name = "apq"
path = "src/bin/apq.rs"

[[bin]]
name = "super-apq"
path = "src/bin/super_apq.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Quantization and ML
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.6"

# HuggingFace integration
hf-hub = "0.4"
tokenizers = "0.21"

# File I/O and compression
tar = "0.4"
flate2 = "1.0"
memmap2 = "0.9"

# Progress and logging
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
assert_approx_eq = "1.1"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true